    * IMPORTANT: :viusage and :exusage now jump to the help index, use the
      special versions for the old behavior
    * IMPORTANT: renamed Startup and Quit autocmd events to VimperatorEnter and
      VimperatorLeave respectively
    * IMPORTANT: 'verbose' is now by default at 1, set to 0 to not show any status messages
    * IMPORTANT: $VIMPERATOR_HOME is no longer used.

    * Added ~/.vimperator/info/{profile}/, similar to viminfo
    * added $VIMPERATOR_RUNTIME, $VIMPERATOR_INIT
    * :hardcopy now supports output redirection to a file on Unix and MacUnix
    * add ";f" extended hint mode to focus a frame
    * add "r", "l", and "b" to 'guioptions' to toggle the scrollbars.
    * remove spaces and newlines when open urls starting with http:// or similar
      before :o http://linux .com would search for http://linux and for .com, now
      it just opens linux.com. Also handy when pasting broken urls with p or P.
    * add 'wildcase' option
    * 'linkbgcolor', 'linkfgcolor', ... have been replaced with highlight
      groups, HintElem and HintActive
    * new 'followhints' option
    * :buffers supports a filter now to only list buffers matching filter (vim
      incompatible, but consistent with other commands)
    * Favicon support in many places
    * add 'Fullscreen' autocommmand
    * add :colorscheme
    * multibyte support for hints (thanks Xie&Tian)
    * add 'exrc'
    * add 'errorbells'
    * add shell command completion for :!
    * add :map <silent> to prevent a mapping from being echoed
    * add guioptions=nN to number tabs
    * add :loadplugins command
    * add . mapping
    * add N% normal mode command
    * add interpolation for items such as <url> to autocommands
    * add -nargs, -complete, -bang, and -count attribute support to :command
    * much improved completion support, including javascript, option, and search keyword
    * add <PageUp>/<S-Up> and <PageDown>/<S-Down> command-line mappings for